--- a/css/styles.css
+++ b/css/styles.css
@@ -203,3 +203,12 @@ footer > h1 {
     margin: 0 auto;
     max-width: 960px;
 }
+
+/*Bootstrap related*/
+.container-fluid {
+    padding:0;
+}
+
+.favorite-websites > .row > .col-md-4 > img {
+    margin: 0 auto;
+}
