--- a/css/styles.css
+++ b/css/styles.css
@@ -208,7 +208,9 @@ footer > h1 {
 .container-fluid {
     padding:0;
 }
-
-.favorite-websites > .row > .col-md-4 > img {
+.img-modal {
+    text-align: center;
+}
+#favorite-websites > .row > .col-md-4 > img {
     margin: 0 auto;
 }
