--- a/css/styles.css
+++ b/css/styles.css
@@ -1,216 +1,1 @@
-/*
-Colors:
-deep blue: 085A9C
-light blue: 088AA6
-turquoise: 008F82
-gentle green: 08A66B
-green: 089C3B
-*/
-
-h1 {
-    color:black;
-    font: SANS-SERIFF;
-    font-size: 100px;
-}
-
-body {
-    background-color:none;
-    color: black;
-}
-
-#header {
-    background-color: none;
-    min-height: 80px;
-}
-
-#header > h1 {
-    
-    margin:0;
-    text-align: center;
-    font-family: 'Lato', sans-serif;
-    position: relative;transform: translateY(50)
-}
-
-#nav {
-    background-color: 08A66B;
-    min-height: 80px;
-    font-family: 'Lato', sans-serif;
-    height: auto;
-}
-#nav > ul {
-    text-align: center;
-    padding: 15px 0 15px 0;
-    margin: 0;
-}
-
-#nav > ul > button {
-    min-width: 120px;
-    color: ghostwhite;
-    background-color: 085A9C;
-    border: none;
-    padding: 15px 32px;
-    transition: background-color .25s;
-    border-bottom: 2px #08a66b solid;
-}
-
-#nav > ul >button > a {
-    color: ghostwhite;
-}
-
-#nav > ul > button:hover {
-    background-color: 088AA6;
-}
-/*
-.menu {
-    display:flex;
-    background:aliceblue;
-    justify-content: space-around;
-    list-style-type: none;
-    margin:0;
-}
-#middle-wrapper-width {
-    display: flex;
-    font-family: 'Lato', sans-serif;
-    max-width: 960px;
-    margin: 0 auto;  
-}
-#middle-wrapper {
-    
-}
-*/
-
-.side-by-side {
-    
-}
-
-#main-content-wrapper .image-content {
-    text-align: center;
-    margin:0 auto;
-    margin-top: 50px;
-}
-
-.image-content > img {
-    max-width: 200px;
-    border-radius: 50%;
-}
-
-.image-content > h4 {
-    font-family: 'Lato', sans-serif;
-    font-weight: 300;
-    color: antiquewhite
-}
-
-.image-content > h4 > a {
-    color: black;
-}
-
-.image-content >h4 >a:hover {
-    color: 088AA6;
-}
-
-#main-content-wrapper article {
-
-}
-
-#main-content-wrapper article h2 {
-    text-align: center;
-}
-
-#main-content-wrapper article p {
-    max-width:300px;
-    margin:0 auto
-}
-
-#main-content-wrapper #skills {
-    text-align: center;
-    font-weight: 300;
-    letter-spacing: 2px;
-    
-}
-
-#main-content-wrapper #skills span {
-      font-weight: 400;
-    
-}
-
-#aside-content-wrapper {
-    background-color: white;
-    margin-top: 50px;
-    font-family: 'Lato', sans-serif;
-    background-color: #fff
-}
-
-#aside-right {
-    margin:0 50px 0 8px;
-}
-
-#aside-right h3 {
-    text-align: center;
-}
-
-#latest-work {
-    list-style-type:none;
-}
-
-#latest-work > li {
-    padding-top: 15px;
-    padding-bottom: 15px;
-    width: 100%;
-    border-bottom: 1px black solid;
-}
-
-#latest-work >li:before {
-    content: '';
-    border-color: transparent #085A9C;
-    border-style: solid;
-    border-width: .35em 0 .35em .45em;
-    display: block;
-    height:0;
-    width:0;
-    left: -1em;
-    top: .9em;
-    position: relative;
-}
-
-#favorite-websites {
-    background-image:url(img/bg.jpg);
-    border-top: 5px #008F82 solid;
-    border-bottom: 5px #008F82 solid;
-    text-align: center;
-   }
-
-#favorite-websites ul {
-    list-style-type: none;
-    display: flex;
-    justify-content: space-around;
-    margin: 0;
-    padding: 40px;
-}
-
-footer {
-    
-    background-color:08A66B;
-    margin:0;
-}
-
-
-footer > h1 {
-    text-align:center;
-    margin:0;
-}
-
-.max-width {
-    margin: 0 auto;
-    max-width: 960px;
-}
-
-/*Bootstrap related*/
-.container-fluid {
-    padding:0;
-}
-.img-modal {
-    text-align: center;
-}
-#favorite-websites > .row > .col-md-4 > img {
-    margin: 0 auto;
-}
+/*Colors:deep blue: 085A9Clight blue: 088AA6turquoise: 008F82gentle green: 08A66Bgreen: 089C3B*/h1{color:black; font: SANS-SERIFF; font-size: 100px;}body{background-color:none; color: black;}#header{background-color: none; min-height: 80px;}#header > h1{margin:0; text-align: center; font-family: 'Lato', sans-serif; position: relative;transform: translateY(50)}#nav{background-color: 08A66B; min-height: 80px; font-family: 'Lato', sans-serif; height: auto;}#nav > ul{text-align: center; padding: 15px 0 15px 0; margin: 0;}#nav > ul > button{min-width: 120px; color: ghostwhite; background-color: 085A9C; border: none; padding: 15px 32px; transition: background-color .25s; border-bottom: 2px #08a66b solid;}#nav > ul >button > a{color: ghostwhite;}#nav > ul > button:hover{background-color: 088AA6;}/*.menu{display:flex; background:aliceblue; justify-content: space-around; list-style-type: none; margin:0;}#middle-wrapper-width{display: flex; font-family: 'Lato', sans-serif; max-width: 960px; margin: 0 auto;}#middle-wrapper{}*/.side-by-side{}#main-content-wrapper .image-content{text-align: center; margin:0 auto; margin-top: 50px;}.image-content > img{max-width: 200px; border-radius: 50%;}.image-content > h4{font-family: 'Lato', sans-serif; font-weight: 300; color: antiquewhite}.image-content > h4 > a{color: black;}.image-content >h4 >a:hover{color: 088AA6;}#main-content-wrapper article{}#main-content-wrapper article h2{text-align: center;}#main-content-wrapper article p{max-width:300px; margin:0 auto}#main-content-wrapper #skills{text-align: center; font-weight: 300; letter-spacing: 2px;}#main-content-wrapper #skills span{font-weight: 400;}#aside-content-wrapper{background-color: white; margin-top: 50px; font-family: 'Lato', sans-serif; background-color: #fff}#aside-right{margin:0 50px 0 8px;}#aside-right h3{text-align: center;}#latest-work{list-style-type:none;}#latest-work > li{padding-top: 15px; padding-bottom: 15px; width: 100%; border-bottom: 1px black solid;}#latest-work >li:before{content: ''; border-color: transparent #085A9C; border-style: solid; border-width: .35em 0 .35em .45em; display: block; height:0; width:0; left: -1em; top: .9em; position: relative;}#favorite-websites{background-image:url(img/bg.jpg); border-top: 5px #008F82 solid; border-bottom: 5px #008F82 solid; text-align: center;}#favorite-websites ul{list-style-type: none; display: flex; justify-content: space-around; margin: 0; padding: 40px;}footer{background-color:08A66B; margin:0;}footer > h1{text-align:center; margin:0;}.max-width{margin: 0 auto; max-width: 960px;}/*Bootstrap related*/.container-fluid{padding:0;}.img-modal{text-align: center;}#favorite-websites > .row > .col-md-4 > img{margin: 0 auto;}
